k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exercise-staging
  labels:
    env: staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: exercise-prod
  labels:
    env: prod
