k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exercise-api-service
  namespace: exercise-prod
spec:
  selector:
    app: exercise-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
